# brainglobe-meta

./: .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: test_and_deploy.yml
brainglobe/: __init__.py  _conda_handles.py  _tensorflow_handle.py
brainglobe/citation/: bibtex_fmt.py  cite.py  format.py  repositories.py
doc/: brainglobe-interdependencies.md
docs/: brainglobe-interdependencies.md
docs/assets/: bg-dependencies.drawio
tests/test_integration/: test_cite_cli.py
tests/test_unit/: test__version__.py  test_tool_exposure.py
tests/test_unit/citation/: test_bibtex_fmt.py  test_bibtexentry.py  test_cite.py  test_format.py  test_repositories.py  test_repository.py
