[project]
name = "brainglobe"
authors = [
  {name = "BrainGlobe", email= "code@adamltyson.com"}
]
description = "Python-based tools for computational neuroanatomy."
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
  "napari[all]",
  "bg-space>=0.5.0",
  "cellfinder-core>=0.3",
  "imio",
  "bg-atlasapi>=1.0.0",
  # "bg-atlasgen", [WIP]
  # "brainglobe-napari", [WIP]
  "brainglobe-napari-io",
  "morphapi>=0.1.3.0",
  "cellfinder-napari",
  "brainreg-segment>=0.0.2",
  "brainreg",
  "brainreg-napari",
  "cellfinder"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
